--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -2,7 +2,7 @@
 @import 'bootstrap-icons/font/bootstrap-icons';
 
 ////////////// Files imports
-@import './home.scss';
+@import './pages/home.scss';
 
 
 
