--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -3,6 +3,7 @@
 
 ////////////// Files imports
 @import './pages/home.scss';
+@import './shared/index.scss';
 
 
 
@@ -12,5 +13,5 @@
 html, body {
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
