--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -2,7 +2,10 @@
 @import 'bootstrap-icons/font/bootstrap-icons';
 
 ////////////// Files imports
+// Pages
 @import './pages/home.scss';
+
+// Shared
 @import './shared/index.scss';
 
 
