--- a/app/views/albums/_index.html.erb
+++ b/app/views/albums/_index.html.erb
@@ -18,10 +18,10 @@
             <p class="card-text"><%= album.artist %></p>
             <p class="card-text"><%= album.genre %></p>
             <p class="card-text"><%= album.year %></p>
-            <p class="card-text"><%= album.price %></p>
-            <div class="d-flex justify-content-between">
-              <%= button_to "delete", album_path(album), method: :delete, data: { confirm: "Are you sure you want to remove #{album.title}?"}, class: 'text-white bg-dark' %>
-              <%= button_to "Edit", edit_album_path(album), method: :get, class: 'text-white bg-dark' %>
+            <p class="card-text">£<%= album.price %>0</p>
+            <div class="d-flex justify-content-end gap-1">
+              <%= button_to "Edit", edit_album_path(album), method: :get, class: 'text-white bg-dark rounded' %>
+              <%= button_to "delete", album_path(album), method: :delete, data: { confirm: "Are you sure you want to remove #{album.title}?"}, class: 'text-white bg-dark rounded' %>
             </div>
           </div>
         </div>
